# Starter-Kit-3D-Platformer-Bevy

./: Cargo.toml  build.rs  tree.txt
common/: Cargo.toml
common/src/: audio.rs  lib.rs  loading.rs  math.rs
common/src/coin/: components.rs  mod.rs  systems.rs
common/src/environment/: environment.rs
common/src/falling_platform/: components.rs  mod.rs  systems.rs
common/src/player/: camera.rs  components.rs  input.rs  mod.rs  player.rs  systems.rs
mobile/src/: lib.rs
scenes/: Cargo.toml
scenes/src/: lib.rs  main_scene.rs
scenes/src/blueprints/: camera_view.rs  cloud.rs  coin.rs  falling_platform.rs  flag.rs  grass_platform.rs  medium_platform.rs  mod.rs  platform.rs  player.rs
src/: lib.rs  loading.rs  main.rs  menu.rs
src/actions/: mod.rs
src/environment/: environment.rs  mod.rs
src/player/: camera.rs  input.rs  mod.rs  player.rs
