[package]
name = "common"
version = "0.1.0"
edition = "2021"

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy_reflect_derive = "0.13.2"
bevy_reflect = "0.13.2"
bevy_kira_audio = { version = "0.19" }
bevy_asset_loader = { version = "0.20" }
rand = { version = "0.8.3" }
webbrowser = { version = "0.8", features = ["hardened"] }
num-traits = "0.2.19"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false }
leafwing-input-manager = "0.13.3"
serde = { version = "1.0.197", features = ["derive"] }
bevy_editor_pls = "0.8.1"
bevy_rapier3d = { version = "0.26.0", features = ["debug-render"] }
bevy-inspector-egui = "0.24.0"
bevy-tnua-rapier3d = "0.6.0"
bevy-tnua = "0.18.0"